Bug 1210553 - Remove the alternate flags arguments from SurfaceCache's Lookup functions. r=dholbert